# Vulnera

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LLM_POLICY.md  PHILOSOPHY.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  clippy.toml  deny.toml  docker-entrypoint.sh  install.sh  lefthook.yml  nextest.toml  rustfmt.toml  tarpaulin.toml
.cargo/: config.toml
vulnera-api/: Cargo.toml  README.md
vulnera-api/src/: lib.rs  module.rs
vulnera-api/src/application/: mod.rs  use_cases.rs
vulnera-api/src/domain/: entities.rs  mod.rs  value_objects.rs
vulnera-api/src/infrastructure/: mod.rs
vulnera-api/src/infrastructure/analyzers/: authentication_analyzer.rs  authorization_analyzer.rs  data_exposure_analyzer.rs  design_analyzer.rs  input_validation_analyzer.rs  mod.rs  oauth_analyzer.rs  resource_restriction_analyzer.rs  security_headers_analyzer.rs  security_misconfig_analyzer.rs
vulnera-api/src/infrastructure/parser/: mod.rs  openapi_parser.rs  schema_resolver.rs
vulnera-api/src/infrastructure/rules/: default_rules.rs  mod.rs
vulnera-api/tests/: snapshot_openapi_findings.rs  test_openapi_analysis.rs
vulnera-api/tests/common/: fixtures.rs  helpers.rs  mod.rs
vulnera-api/tests/fixtures/: circular_refs.yaml  missing_security.yaml  oauth2_all_flows.yaml  schema_refs.yaml  valid_minimal.yaml
vulnera-api/tests/snapshots/: snapshot_openapi_findings__oauth_findings.snap  snapshot_openapi_findings__openapi_findings.snap
vulnera-api/tests/unit/: mod.rs  test_parser.rs
vulnera-api/tests/unit/analyzers/: mod.rs  test_authentication.rs  test_enhanced_analyzers.rs  test_oauth.rs
vulnera-cli/: Cargo.toml
vulnera-cli/.cargo/: config.toml
vulnera-cli/src/: api_client.rs  context.rs  executor.rs  fix_generator.rs  lib.rs  output.rs
vulnera-cli/src/commands/: analyze.rs  api.rs  auth.rs  config.rs  deps.rs  sast.rs  secrets.rs
vulnera-cli/tests/: cli_tests.rs
vulnera-contract/: Cargo.toml  README.md
vulnera-contract/benches/: bench_cache.rs  bench_parsers.rs
vulnera-contract/src/: lib.rs
vulnera-contract/src/application/: mod.rs
vulnera-contract/src/application/analytics/: analytics_service.rs  use_cases.rs
vulnera-contract/src/application/auth/: mod.rs  use_cases.rs
vulnera-contract/src/config/: mod.rs
vulnera-contract/src/domain/: mod.rs
vulnera-contract/src/infrastructure/: mod.rs
vulnera-contract/tests/: datatest_parsers.rs  proptest_parsers.rs  proptest_version_parsing.rs  test_cache_integration.rs  test_parser_factory.rs  test_rate_limiter.rs
vulnera-contract/tests/common/: fixtures.rs  helpers.rs  mocks.rs
vulnera-core/: Cargo.toml
vulnera-core/benches/: bench_cache.rs  bench_parsers.rs
vulnera-core/src/: lib.rs
vulnera-core/src/application/: errors.rs  mod.rs
vulnera-core/src/config/: mod.rs  validation.rs
vulnera-core/src/domain/: mod.rs
vulnera-core/src/infrastructure/: mod.rs  repositories.rs
vulnera-core/tests/: datatest_parsers.rs  proptest_parsers.rs  proptest_version_parsing.rs  test_cache_integration.rs  test_parser_factory.rs  test_rate_limiter.rs
vulnera-core/tests/common/: fixtures.rs  helpers.rs  mocks.rs  mod.rs
vulnera-infrastructure/: Cargo.toml
vulnera-infrastructure/src/: lib.rs
vulnera-infrastructure/src/config/: analysis.rs  api_security.rs  cache.rs  database.rs  llm.rs  logging.rs  mod.rs  sast.rs  secret_detection.rs  server.rs  sync.rs  validation.rs
vulnera-infrastructure/src/database/: mod.rs
vulnera-infrastructure/src/infrastructure/: mod.rs
vulnera-infrastructure/src/logging/: mod.rs
vulnera-llm/: Cargo.toml  README.md
vulnera-llm/src/: lib.rs
vulnera-llm/src/domain/: error.rs  messages.rs  mod.rs  provider.rs
vulnera-llm/src/infrastructure/: mod.rs  registry.rs  response_parser.rs
vulnera-llm/tests/common/: mod.rs
vulnera-llm/tests/integration/: mod.rs  test_gemini_provider.rs  test_huawei_provider.rs  test_streaming_chunk_parsing.rs
vulnera-llm/tests/unit/: mod.rs  test_explain_vulnerability.rs  test_generate_code_fix.rs  test_natural_language_query.rs  test_prompts.rs
vulnera-orchestrator/: Cargo.toml  README.md
vulnera-orchestrator/src/: lib.rs
vulnera-orchestrator/src/application/: intelligence.rs  mod.rs  services.rs  use_cases.rs  workflow.rs
vulnera-orchestrator/src/domain/: entities.rs  mod.rs  module.rs  services.rs  value_objects.rs
vulnera-orchestrator/src/infrastructure/: job_queue.rs  mod.rs  module_registry.rs  module_selector.rs  project_detection.rs  sharding.rs
vulnera-orchestrator/src/presentation/: controllers.rs  middleware.rs  mod.rs  models.rs  routes.rs  sarif.rs
vulnera-orchestrator/tests/: snapshot_api_responses.rs  test_api_endpoints.rs  test_early_auth_middleware.rs  test_job_lifecycle.rs  test_s3_cleanup.rs  test_workflow.rs
vulnera-orchestrator/tests/common/: fixtures.rs  helpers.rs  mod.rs
vulnera-orchestrator/tests/snapshots/: snapshot_api_responses__error_response.snap  snapshot_api_responses__health_response.snap
vulnera-sandbox/: Cargo.toml  README.md
vulnera-sandbox/src/: config.rs  lib.rs
vulnera-sandbox/src/application/: executor.rs  mod.rs  selector.rs
vulnera-sandbox/src/domain/: limits.rs  mod.rs  policy.rs  traits.rs
vulnera-sandbox/src/infrastructure/: landlock.rs  mod.rs  noop.rs  process.rs  seccomp.rs  wasm.rs
vulnera-sandbox/tests/: config_tests.rs  executor_tests.rs  integration_tests.rs  module_tests.rs  selector_tests.rs  worker_integration.rs
vulnera-secrets/: Cargo.toml  README.md
vulnera-secrets/src/: lib.rs  module.rs
vulnera-secrets/src/application/: mod.rs  use_cases.rs
vulnera-secrets/src/domain/: entities.rs  mod.rs  value_objects.rs
vulnera-secrets/src/infrastructure/: mod.rs  scanner.rs
vulnera-secrets/tests/: datatest_secret_patterns.rs  proptest_entropy.rs  test_false_positive_prevention.rs  test_new_damn_repo.rs  test_secret_detection.rs  test_semantic_filtering.rs  test_verifiers.rs
vulnera-secrets/tests/common/: fixtures.rs  helpers.rs  mod.rs
(+492 files in other folders)
