[workspace]
members = [
    "vulnera-core",
    "vulnera-deps",
    "vulnera-orchestrator",
    "vulnera-sast",
    "vulnera-secrets",
    "vulnera-api",
]
resolver = "2"

[package]
name = "vulnera-rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "vulnera-rust"
path = "src/main.rs"

[dependencies]
vulnera-core = { path = "vulnera-core" }
vulnera-deps = { path = "vulnera-deps" }
vulnera-orchestrator = { path = "vulnera-orchestrator" }
vulnera-sast = { path = "vulnera-sast" }
vulnera-secrets = { path = "vulnera-secrets" }
vulnera-api = { path = "vulnera-api" }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# Logging
tracing = { workspace = true }

# Database
sqlx = { workspace = true }

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Vulnera-Team"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/k5602/vulnera"
keywords = ["security", "vulnerability", "analysis", "dependencies"]
categories = ["web-programming", "development-tools"]

[workspace.dependencies]
# Web framework
axum = { version = "0.8.6", features = ["macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace", "timeout"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }
futures = "0.3.31"
async-trait = "0.1.89"

# Sources
osv = { version = "0.2", features = ["client"] }
nvd_cve = "0.2.0"

# HTTP client
reqwest = { version = "0.12.24", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenAPI documentation
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Configuration
config = "0.15"
dotenvy = "0.15"

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

# Time handling
chrono = { version = "0.4.40", features = ["serde"] }

# UUID generation
uuid = { version = "1.18.0", features = ["v4", "serde"] }
url = "2.5.2"

# Hashing for cache keys
sha2 = "0.10.8"
hex = "0.4.3"

# Multi-level caching
moka = { version = "0.12", features = ["future"] }
flate2 = "1.0"

# Redis client for Dragonfly DB
redis = { version = "0.32.7", features = [
    "tokio-comp",
    "connection-manager",
    "aio",
] }

# Authentication and security
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
bcrypt = "0.17.1"
rand = "0.9.2"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

# File and Version parsing
toml = "0.9.8"
serde_yml = "0.0.12"
quick-xml = "0.38.4"
regex = "1.11.1"
pest = "2.8.1"
pest_derive = "2.8.1"
semver = { version = "1.0", features = ["serde"] }
octocrab = { version = "0.47" }
base64 = "0.22"
percent-encoding = "2.3"
once_cell = "1.20"
git2 = "0.20.2"

# SAST dependencies
tree-sitter = "0.25.10"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
# Parser dependencies (for dependency file parsing)
tree-sitter-json = "0.21.0"
tree-sitter-go = "0.25.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.5"

# Testing crates (for use in dev-dependencies)
proptest = "1.5.1"
mockall = "0.13.1"
criterion = { version = "0.7.0", features = ["html_reports", "async_tokio"] }
insta = { version = "1.40.0", features = ["redactions", "json"] }
snapbox = "0.6.23"
datatest-stable = "0.3.3"
testcontainers = { version = "0.25.2", features = ["postgres", "async"] }
wiremock = "0.6.0"
rstest = "0.26.1"
axum-test = "18.1"
tempfile = "3.23.0"
mockito = "1.7.0"
tokio-test = "0.4.4"
serial_test = "3.2.0"

[workspace.lints.clippy]
type_complexity = "allow"

# Test profiles
[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1

# Custom test configurations
[package.metadata.test]
timeout = "60s"
threads = 4
coverage = true
junit = true
