[workspace]
members = [
    "vulnera-core",
    "vulnera-deps",
    "vulnera-orchestrator",
    "vulnera-sast",
    "vulnera-secrets",
    "vulnera-api",
    "vulnera-llm",
    "vulnera-sandbox",
]
exclude = ["vulnera-cli","advisors","adapter"]

resolver = "2"

[package]
name = "vulnera-rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "vulnera-rust"
path = "src/main.rs"

[features]
default = []


[dependencies]
vulnera-core = { path = "vulnera-core" }
vulnera-deps = { path = "vulnera-deps" }
vulnera-orchestrator = { path = "vulnera-orchestrator" }
vulnera-sast = { path = "vulnera-sast" }
vulnera-secrets = { path = "vulnera-secrets" }
vulnera-api = { path = "vulnera-api" }
vulnera-llm = { path = "vulnera-llm" }
vulnera-sandbox = { path = "vulnera-sandbox" }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# Logging
tracing = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization (needed for CLI JSON output)
serde = { workspace = true }
serde_json = { workspace = true }

# GitHub API
octocrab = { workspace = true }

# Time handling (for quota UTC reset)
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Hashing (for machine ID in quota)
sha2 = { workspace = true }
hex = { workspace = true }

# File system traversal
walkdir = { workspace = true }

# Base64 encoding (for encrypted credentials)
base64 = { workspace = true }

# TLS/Crypto
rustls = { workspace = true }

# CLI dependencies (optional, enabled by 'cli' feature)
clap = { workspace = true, optional = true }
dialoguer = { workspace = true, optional = true }
comfy-table = { workspace = true, optional = true }
keyring = { workspace = true, optional = true }
aes-gcm = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
directories = { workspace = true, optional = true }
console = { workspace = true, optional = true }
hostname = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
tempfile.workspace = true

[workspace.package]
version = "0.5.1"
edition = "2024"
rust-version = "1.91"
authors = ["Vulnera-Team"]
license = "BUSL-1.1"
license-file = "LICENSE"
repository = "https://github.com/k5602/vulnera"
keywords = ["security", "vulnerability", "analysis", "dependencies"]
categories = ["web-programming", "development-tools"]

[workspace.dependencies]
# Web framework
axum = { version = "0.8.8", features = ["macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace", "timeout"] }

# Async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7"
futures = "0.3.31"
async-trait = "0.1.89"

# HTTP client
reqwest = { version = "0.13", features = ["json", "stream"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenAPI documentation
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
oas3 = { version = "0.20.1", features = ["yaml-spec"] }
# Error handling
anyhow = "1.0"
thiserror = "2.0"
# advisor
vulnera-advisor = "0.1.7"

# Configuration
config = "0.15"
dotenvy = "0.15"

# Logging and tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# Time handling
chrono = { version = "0.4.43", features = ["serde"] }

# UUID generation
uuid = { version = "1.20.0", features = ["v4", "serde"] }
url = "2.5.8"

# Hashing for cache keys
sha2 = "0.10.9"
hex = "0.4.3"
hmac = "0.12.1"

# Multi-level caching
moka = { version = "0.12", features = ["future"] }
flate2 = "1.1"

# Authentication and security
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.9.2"
rustls = { version = "0.23", features = ["ring"] }

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

# File and Version parsing
toml = "0.9.8"
serde_yml = "0.0.12"
quick-xml = "0.39.0"
regex = "1.12"
pest = "2.8.5"
pest_derive = "2.8.5"
semver = { version = "1.0", features = ["serde"] }
octocrab = { version = "0.49.5" }
base64 = "0.22"
percent-encoding = "2.3"
once_cell = "1.21"
git2 = "0.20.3"
streaming-iterator = "0.1"

# AWS SDK for S3 bucket analysis
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.122.0"
aws-credential-types = "1.2"

# SAST dependencies
tree-sitter = "0.26.3"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-rust = "0.24.0"
tree-sitter-json = "0.24.8"
tree-sitter-go = "0.25.0"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
globset = "0.4"
oxc_allocator = "0.113.0"
oxc_parser = "0.113.0"
oxc_span = "0.113.0"

# Serialization (binary)
bincode = "1.3"
petgraph = "0.8.3"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
walkdir = "2.5"
bytes = "1.11.0"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env", "color"] }
dialoguer = { version = "0.12.0", features = ["password"] }
comfy-table = "7.2"
keyring = "3.6"
aes-gcm = "0.10"
indicatif = { version = "0.18.3", features = ["rayon"] }
directories = "6.0.0"
console = "0.16.2"
hostname = "0.4"
dirs = "6.0"

# Testing crates (for use in dev-dependencies)
proptest = "1.9"
mockall = "0.14.0"
criterion = { version = "0.8.1", features = ["html_reports", "async_tokio"] }
insta = { version = "1.46.0", features = ["redactions", "json"] }
datatest-stable = "0.3.3"
testcontainers = { version = "0.26.3" }
wiremock = "0.6"
rstest = "0.26.1"
axum-test = "18.5.0"
tempfile = "3.25.0"
mockito = "1.7.1"
tokio-test = "0.4.5"
serial_test = "3.2.0"

[workspace.lints.clippy]
type_complexity = "allow"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Allow for maximum cross-module optimization
panic = "abort"   # Remove unwinding code for smaller binaries
strip = true      # Strip debug symbols from the final binary

# Test profiles
[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1

# Custom test configurations
[package.metadata.test]
timeout = "90s"
threads = 4
coverage = true
junit = true
