[package]
name = "vulnera-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Standalone CLI for Vulnera vulnerability analysis - offline SAST, secrets, and API security scanning"

[[bin]]
name = "vulnera"
path = "src/main.rs"

[dependencies]
# Core dependencies for config and types
vulnera-core = { path = "../vulnera-core" }

# Offline analysis modules (embedded in CLI)
vulnera-sast = { path = "../vulnera-sast" }
vulnera-secrets = { path = "../vulnera-secrets" }
vulnera-api = { path = "../vulnera-api" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP client for server API calls (deps analysis, auth)
reqwest = { workspace = true, features = ["json"] }

# CLI framework
clap = { workspace = true }
dialoguer = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }

# Credential storage
keyring = { workspace = true }
aes-gcm = { workspace = true }

# Directories and system info
directories = { workspace = true }
hostname = { workspace = true }
dirs = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Time handling
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Hashing (for machine ID, cache keys)
sha2 = { workspace = true }
hex = { workspace = true }

# File system traversal
walkdir = { workspace = true }

# Base64 encoding
base64 = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID for job IDs
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
rstest = { workspace = true }

[features]
default = []
