[package]
name = "vulnera-cli"
version = "0.2.0"
edition = "2024"
authors = ["Vulnera-Team"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/k5602/vulnera"
keywords = ["security", "vulnerability", "analysis", "cli"]
categories = ["command-line-utilities", "development-tools"]
description = "Standalone CLI for Vulnera vulnerability analysis - offline SAST, secrets, and API security scanning"

# Standalone workspace
[workspace]

[[bin]]
name = "vulnera"
path = "src/main.rs"

[dependencies]
# Core dependencies for config and types
vulnera-core = { path = "../vulnera-core" }

# Offline analysis modules
vulnera-sast = { path = "../vulnera-sast" }
vulnera-secrets = { path = "../vulnera-secrets" }
vulnera-api = { path = "../vulnera-api" }

# Async runtime
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1.89"

# HTTP client for server API calls (deps analysis, auth)
reqwest = { version = "0.12.24", features = ["json"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "env", "color"] }
dialoguer = { version = "0.12.0", features = ["password"] }
comfy-table = "7.1"
indicatif = { version = "0.18.3", features = ["rayon"] }
console = "0.16.1"

# Credential storage
keyring = "3.6"
aes-gcm = "0.10"

# Directories and system info
directories = "6.0.0"
hostname = "0.4"
dirs = "6.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

# Time handling
chrono = { version = "0.4.40", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Hashing (for machine ID, cache keys)
sha2 = "0.10.8"
hex = "0.4.3"

# File system traversal
walkdir = "2.5"

# File system watching (for --watch mode)
notify = "6.1"
notify-debouncer-mini = "0.4"

# Base64 encoding
base64 = "0.22"

# Logging
tracing = "0.1.42"
tracing-subscriber = { version = "0.3.21", features = ["env-filter", "json"] }

# UUID for job IDs
uuid = { version = "1.18.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3.23.0"
wiremock = "0.6.0"
rstest = "0.26.1"
assert_cmd = "2.0"
predicates = "3.1"

[features]
default = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
