[package]
name = "vulnera-contract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pure analysis contract for Vulnera: AnalysisModule trait, Finding types, module plugin interface"

[dependencies]
# Async trait support
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }

# Time handling
chrono = { workspace = true }

# JSON value type for module config
serde_json = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Hashing for cache keys
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
