[package]
name = "vulnera-infrastructure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Infrastructure layer for Vulnera: config, cache, database, logging"

[dependencies]
# Internal
vulnera-contract = { path = "../vulnera-contract" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Configuration
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dotenvy = { workspace = true }

# Database
sqlx = { workspace = true }

# Cache
moka = { workspace = true }
flate2 = { workspace = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "aio"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
