[package]
name = "vulnera-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vulnera-core = { path = "../vulnera-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
futures = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
