[package]
name = "vulnera-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vulnera-core = { path = "../vulnera-core" }
vulnera-deps = { path = "../vulnera-deps" }
vulnera-llm = { path = "../vulnera-llm" }
sqlx = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# OpenAPI documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# URL parsing
url = { workspace = true }

# HTTP client for webhook delivery
reqwest = { workspace = true, features = ["json"] }

# HMAC signatures for webhook verification
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Directory traversal
walkdir = { workspace = true }
git2 = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
axum-test = { workspace = true }
insta = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
