[package]
name = "vulnera-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vulnera-contract = { path = "../vulnera-contract" }
vulnera-infrastructure = { path = "../vulnera-infrastructure" }
vulnera-sandbox = { path = "../vulnera-sandbox" }
sqlx = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
axum-test = { workspace = true }
