[package]
name = "vulnera-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vulnera-contract = { path = "../vulnera-contract" }
vulnera-infrastructure = { path = "../vulnera-infrastructure" }
vulnera-sandbox = { path = "../vulnera-sandbox" }
sqlx = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async
async-trait = { workspace = true }
tokio-stream = { workspace = true }

# Time handling
chrono = { workspace = true }

# OpenAPI documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Directory traversal & git
walkdir = { workspace = true }
git2 = { workspace = true }
tempfile = { workspace = true }

# URL
url = { workspace = true }

# HTTP client for webhook delivery
reqwest = { workspace = true, features = ["json"] }

# HMAC signatures for webhook verification
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# AWS SDK for S3 bucket analysis
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-credential-types = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
axum-test = { workspace = true }
insta = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
vulnera-sast = { path = "../vulnera-sast" }
vulnera-secrets = { path = "../vulnera-secrets" }
vulnera-api = { path = "../vulnera-api" }
vulnera-deps = { path = "../vulnera-deps" }
