[package]
name = "vulnera-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["security", "sandbox", "landlock", "seccomp"]
categories = ["os::linux-apis", "security"]
description = "Hybrid kernel sandboxing for Vulnera security modules"

[dependencies]
# Shared dependencies
vulnera-contract = { path = "../vulnera-contract" }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.5.0"
nix = { version = "0.31.0", features = ["process", "signal", "resource", "sched", "user"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
wasmtime = "40"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
